# Computer_Graphics

./: README.md
Assignment 1/Assignment01_code/: CMakeLists.txt  main.cpp
Assignment 1/Assignment01_code/__MACOSX/Assignment01_code/ext/glm/test/gtc/: ._gtc_reciprocal.cpp
Assignment 1/Assignment01_code/ext/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
Assignment 1/Assignment01_code/ext/imgui/glfw/: imgui_impl_glfw_gl3.cpp
Assignment 1/Assignment01_code/resources/: sprite.frag  sprite.vert
Assignment 1/Assignment01_code/src/: Game.cpp  Game.hpp  utitliy.cpp  utitliy.hpp
Assignment 2/Assignment02_code/: CMakeLists.txt
Assignment 2/Assignment02_code/StudentCode/: cube.cpp  main.cpp  torus.cpp  transformations.cpp  tvp.hpp  viewingprojection.cpp
Assignment 2/Assignment02_code/src/: gl_utils.cpp  shader_utils.h
Assignment 3/Assignment03_code/: .gitignore  CMakeLists.txt
Assignment 3/Assignment03_code/Resources/: fshader.fs  vshader.vs
Assignment 3/Assignment03_code/cmake/modules/: HelperFunctions.cmake
Assignment 3/Assignment03_code/src/: main.cpp  shader_utils.cpp
Assignment 4/Assignment04_code/: CMakeLists.txt
Assignment 4/Assignment04_code/Src/: camera.cpp  color.h  cylinder.cpp  cylinder.h  material.cpp  object.h  ray.cpp  ray.h  sphere.cpp  triangle.cpp  triangle.h  utility.cpp  utility.hpp  world.cpp  world.h
Assignment 4/Assignment04_code/StudentCode/: main.cpp
Assignment 4/Assignment04_code/__MACOSX/Assignment04_code/ext/glm/glm/detail/: ._type_mat2x3.hpp
